[ios] Set document url in -didFailProvisionalNavigation.

When navigating back to an error page -loadErrorPageForNavigationItem
will immediately begin loading and _documentURL may not match the
lastCommittedURL.  Instead, set this in -didFailProvisionalNavigation.

Bug: 898339
Change-Id: I32bff4cce27c97adde395a3e64ddb58b18bd0593
Reviewed-on: https://chromium-review.googlesource.com/c/1319173
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605956}