ios/web/web_state/ui/crw_web_controller.mm
@@ -3127,6 +3127,8 @@ registerLoadRequestForURL:(const GURL&)requestURL
 
   if (!web::GetWebClient()->IsSlimNavigationManagerEnabled()) {
     self.navigationManagerImpl->CommitPendingItem();
+    web::NavigationItem* lastCommittedItem = navManager->GetLastCommittedItem();
+    [self setDocumentURL:lastCommittedItem->GetURL() context:navigationContext];
   }
 
   if (provisionalLoad) {
